[package]
name = "openmls"
version = "0.8.1"
authors = ["OpenMLS Authors"]
edition = "2021"
description = "A Rust implementation of the Messaging Layer Security (MLS) protocol, as defined in RFC 9420."
license = "MIT"
documentation = "https://docs.rs/openmls"
repository = "https://github.com/openmls/openmls/"
readme = "../README.md"
keywords = ["MLS", "IETF", "RFC9420", "Encryption", "E2EE"]
exclude = ["/test_vectors"]

[dependencies]
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true, optional = true }
openmls_basic_credential = { workspace = true, optional = true, features = [
    "clonable",
    "test-utils",
] }
openmls_memory_storage = { workspace = true, features = [
    "test-utils",
], optional = true }
openmls_sqlite_storage = { workspace = true, optional = true }
openmls_test = { workspace = true, optional = true }
openmls_serialization_helpers = { workspace = true }
openmls_libcrux_crypto = { workspace = true, optional = true }

serde = { workspace = true, features = ["derive"] }
log = { version = "0.4", features = ["std"] }
tls_codec = { workspace = true }
rayon = "^1.12.0"
thiserror = { workspace = true }
backtrace = { version = "0.3", optional = true }
# Only required for tests.
rand = { version = "0.9", optional = true }
serde_json = { version = "1.0", optional = true }
# Crypto providers required for KAT and testing - "test-utils" feature
itertools = { version = "0.14", optional = true }
wasm-bindgen-test = { version = "0.3.50", optional = true }
getrandom = { version = "0.3.4", optional = true }
getrandom_old = { package = "getrandom", version = "0.2.15", optional = true }
web-time = { version = "1.1", optional = true, features = ["serde"] }
once_cell = { version = "1.19.0", optional = true }
zeroize = "1.8.1"
serde_bytes = "0.11.17"

[features]
# enable for compatibility with openmls=0.8.1
0-8-1-storage-format = []
test-utils = [
    "dep:serde_json",
    "dep:itertools",
    "openmls_rust_crypto/test-utils",
    "dep:rand",
    "dep:wasm-bindgen-test",
    "dep:openmls_basic_credential",
    "dep:openmls_memory_storage",
    "dep:openmls_test",
    "dep:once_cell",
    "backtrace",
]
backtrace = ["dep:backtrace"]
libcrux-provider = [
    "dep:openmls_libcrux_crypto",
    "openmls_test?/libcrux-provider",
]
sqlite-provider = [
    "dep:openmls_sqlite_storage",
    "openmls_test?/sqlite-provider",
]
# Expand every `#[openmls_test]` over all ciphersuites supported by each
# enabled provider. Without this feature, each provider emits a single
# test per source function using the MTI ciphersuite. Opt in for nightly
# CI or release validation.
all-ciphersuites = ["openmls_test?/all-ciphersuites"]
# Compile the KAT regenerators. Opt in when refreshing the bundled JSON test
# vectors.
generate-kats = []
crypto-debug = [] # ☣️ Enable logging of sensitive cryptographic information
content-debug = [] # ☣️ Enable logging of sensitive message content
js = [
    "dep:getrandom",
    "dep:web-time",

    # enable randomness source
    "getrandom/wasm_js",
]

js-test = [
    "dep:getrandom_old",

    # enable randomness source
    "getrandom_old/js",

]

virtual-clients-draft = [
    "extensions-draft-08",
    "openmls_traits/virtual-clients-draft",
]

# Same XXX as for `extensions-draft-08-test-dependencies`: the storage-backend
# crates only know about the `virtual-clients-draft` trait methods if they
# enable their own `virtual-clients-draft` feature, but enabling it directly
# from `virtual-clients-draft` would force them in even when not used. So we
# expose a separate feature that tests turn on alongside `virtual-clients-draft`.
# The backends' own `virtual-clients-draft` feature pulls in their
# `extensions-draft-08` impls transitively, so we don't need to chain
# `extensions-draft-08-test-dependencies` here.
virtual-clients-draft-test-dependencies = [
    "openmls_sqlite_storage?/virtual-clients-draft",
    "openmls_memory_storage?/virtual-clients-draft",
]

extensions-draft-08 = [
    "openmls_traits/extensions-draft-08",
    # XXX: to avoid enabling the `openmls_sqlite_storage` dependency
    # and other dependencies used for testing
    # when enabling this feature, these optional dependencies
    # are not explicitly included in this feature.
    #
    # See https://github.com/rust-lang/cargo/issues/10801
    # "openmls_sqlite_storage?/extensions-draft-08",
    # "openmls_libcrux_crypto?/extensions-draft-08",
    # "openmls_memory_storage?/extensions-draft-08",
]

extensions-draft-08-test-dependencies = [
    "openmls_sqlite_storage?/extensions-draft-08",
    "openmls_libcrux_crypto?/extensions-draft-08",
    "openmls_memory_storage?/extensions-draft-08",
]
draft-ietf-mls-pq-ciphersuites = [
    "openmls_traits/draft-ietf-mls-pq-ciphersuites",
    "openmls_memory_storage?/draft-ietf-mls-pq-ciphersuites",
    "openmls_sqlite_storage?/draft-ietf-mls-pq-ciphersuites",
    "openmls_libcrux_crypto?/draft-ietf-mls-pq-ciphersuites",
    "openmls_rust_crypto?/draft-ietf-mls-pq-ciphersuites",
    "openmls_basic_credential?/draft-ietf-mls-pq-ciphersuites",
    "openmls_test?/draft-ietf-mls-pq-ciphersuites",
]
# experimental feature implementing the virtual-clients draft
# enable randomness source
fork-resolution = []

[dev-dependencies]
criterion = { version = "^0.8", default-features = false }       # need to disable default features for wasm
hex = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
openmls_traits = { workspace = true, features = ["test-utils"] }
pretty_env_logger = "0.5"
tempfile = "3"
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"
clap = { version = "4", features = ["derive"] }
base64 = "0.22.1"
flate2 = "1.0"
indicatif = "0.18.3"

# Default test build is rustcrypto-only and MTI-ciphersuite-only.
# Enable `sqlite-provider`, `libcrux-provider`, and/or `all-ciphersuites`
# explicitly (for example on a nightly CI run) to exercise more of the
# matrix.
[dev-dependencies.openmls]
path = "."
features = ["test-utils"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-time = "1.1"

[[bench]]
name = "benchmark"
harness = false
# Uses the libcrux provider directly, so skip the build when that
# provider is not enabled (e.g. on the default test build).
required-features = ["libcrux-provider"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
