[package]
name = "openmls"
version = "1.0.0"
authors = ["OpenMLS Authors"]
edition = "2021"
description = "This is a Rust implementation of the Messaging Layer Security (MLS) protocol based on RFC9420."
license = "MIT"
documentation = "https://openmls.github.io/openmls/"
repository = "https://github.com/openmls/openmls/"
readme = "../README.md"

[dependencies]
openmls_traits = { version = "0.2.0", path = "../traits" }
serde = { version = "^1.0", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
tls_codec = { workspace = true }
thiserror = "^1.0"
backtrace = "0.3"
hex = "0.4"
async-trait = { workspace = true }
openmls_basic_credential = { version = "0.2.0", path = "../basic_credential", features = ["clonable", "test-utils"] }
openmls_x509_credential = { version = "0.2.0", path = "../x509_credential" }
x509-cert = "0.3"
subtle = "2.5"
web-time = "1.1.0"
indexmap = "2.0"
itertools = "0.12"

# Only required for tests.
rand = { version = "0.8", optional = true, features = ["getrandom"] }
getrandom = { version = "0.2", optional = true, features = ["js"] }
serde_json = { version = "1.0", optional = true }
# Crypto backends required for KAT and testing - "test-utils" feature
openmls_rust_crypto = { version = "0.2.0", path = "../openmls_rust_crypto", optional = true }
async-lock = { version = "3.3", optional = true }
rstest = { version = "0.18.2", optional = true }
rstest_reuse = { version = "0.6.0", optional = true }
tokio = { version = "1.24", optional = true, features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = []
crypto-subtle = [] # Enable subtle crypto APIs that have to be used with care.
test-utils = [
    "dep:serde_json",
    "dep:openmls_rust_crypto",
    "dep:rand",
    "dep:getrandom",
    "dep:tokio",
    "dep:rstest",
    "dep:rstest_reuse",
    "dep:async-lock",
    "openmls_basic_credential/test-utils",
]
crypto-debug = [] # ☣️ Enable logging of sensitive cryptographic information
content-debug = [] # ☣️ Enable logging of sensitive message content

[dev-dependencies]
backtrace = "0.3"
hex = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
openmls = { path = ".", features = ["test-utils"] }
openmls_traits = { version = "0.2.0", path = "../traits", features = ["test-utils"] }
pretty_env_logger = "0.5"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
tempfile = "3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
web-sys = { version = "0.3", features = ["Window"] }
js-sys = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = { version = "0.4", features = ["async_futures"] }

[[bench]]
name = "benchmark"
harness = false
