[package]
authors = ["OpenMLS Authors"]
description = "A crypto backend for OpenMLS implementing openmls_traits using RustCrypto primitives."
documentation = "https://docs.rs/openmls_rust_crypto"
edition = "2021"
license = "MIT"
name = "openmls_rust_crypto"
readme = "README.md"
repository = "https://github.com/openmls/openmls/tree/main/openmls_rust_crypto"
version = "0.5.1"

[dependencies]
openmls_memory_storage = { workspace = true }
openmls_traits = { workspace = true }

hpke = { version = "0.6.0", package = "hpke-rs", default-features = false, features = [
    "hazmat",
    "serialization",
] }
# Rust Crypto dependencies
aes-gcm = { version = "0.10" }
chacha20poly1305 = { version = "0.10" }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hkdf = { version = "0.12" }
hmac = { version = "0.12" }
hpke-rs-crypto = { version = "0.6.0" }
hpke-rs-rust-crypto = { version = "0.6.0" }
p256 = { version = "0.13" }
rand = "0.8"
rand_chacha = { version = "0.3" }
serde = { version = "^1.0", features = ["derive"] }
sha2 = { version = "0.10" }
thiserror = "2.0"
tls_codec = { workspace = true }

[features]
async = ["openmls_memory_storage/async", "openmls_traits/async"]
sync = ["openmls_memory_storage/sync", "openmls_traits/sync"]
test-utils = ["openmls_memory_storage/test-utils"]
