[package]
name = "openmls_rust_crypto"
authors = ["OpenMLS Authors"]
version = "0.5.1"
edition = "2021"
description = "A crypto backend for OpenMLS implementing openmls_traits using RustCrypto primitives."
license = "MIT"
documentation = "https://docs.rs/openmls_rust_crypto"
repository = "https://github.com/openmls/openmls/tree/main/openmls_rust_crypto"
readme = "README.md"

[dependencies]
openmls_traits = { workspace = true }
openmls_memory_storage = { workspace = true }

hpke = { version = "0.6.1", package = "hpke-rs", default-features = false, features = [
  "hazmat",
  "serialization",
  "experimental",
] }
# Rust Crypto dependencies
sha2 = { version = "0.11" }
aes-gcm = { version = "0.10" }
chacha20poly1305 = { version = "0.10" }
hmac = { version = "0.13" }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rand_core_0_10 = { package = "rand_core", version = "0.10" }
p256 = { version = "0.13" }
p384 = { version = "0.13" }
hkdf = { version = "0.13" }
rand_chacha = { version = "0.3" }
hpke-rs-crypto = { version = "0.6.1" }
hpke-rs-rust-crypto = { version = "0.6.1", features = ["experimental"] }
tls_codec = { workspace = true }
thiserror = "2.0"
serde = { version = "^1.0", features = ["derive"] }
ml-dsa = "0.1.0"

[features]
test-utils = ["openmls_memory_storage/test-utils"]
draft-ietf-mls-pq-ciphersuites = [
  "openmls_traits/draft-ietf-mls-pq-ciphersuites",
]
