[package]
name = "openmls_test"
version = "0.2.1"
authors = ["OpenMLS Authors"]
edition = "2021"
description = "Test utility used by OpenMLS"
license = "MIT"
documentation = "https://docs.rs/openmls_test"
repository = "https://github.com/openmls/openmls/tree/main/openmls_test"
readme = "Readme.md"

[lib]
proc-macro = true

[features]
# This needs to be enabled explicity to allow disabling on some platforms
libcrux-provider = ["dep:openmls_libcrux_crypto"]
sqlite-provider = ["dep:openmls_sqlite_storage"]
draft-ietf-mls-pq-ciphersuites = [
    "openmls_rust_crypto/draft-ietf-mls-pq-ciphersuites",
    "openmls_libcrux_crypto?/draft-ietf-mls-pq-ciphersuites",
    "openmls_sqlite_storage?/draft-ietf-mls-pq-ciphersuites",
]
# When set, every `#[openmls_test]` expands to one test per supported
# ciphersuite of each enabled provider. When unset (the default), each
# enabled provider emits a single test using the mandatory-to-implement
# ciphersuite MLS_128_DHKEMX25519_AES128GCM_SHA256_Ed25519.
all-ciphersuites = []

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = { version = "1.0.10", features = ["span-locations"] }
ansi_term = "0.12.1"
quote = "1.0"
openmls_rust_crypto = { workspace = true }
openmls_libcrux_crypto = { workspace = true, optional = true }
openmls_traits = { workspace = true }
openmls_sqlite_storage = { workspace = true, optional = true }
