[package]
name = "openmls_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
openmls = {path = "../openmls/"}
openmls_traits = {path = "../traits/"}
openmls_rust_crypto = {path = "../openmls_rust_crypto/"}
wasm-bindgen = "0.2.90"
getrandom = {  features = [ "js" ] }
