[package]
edition = "2024"
name = "storage-provider-lock-demo"
version = "0.1.0"

[dependencies]
openmls = { workspace = true }
openmls_libcrux_crypto = { workspace = true }
openmls_memory_storage = { workspace = true }
openmls_traits = { workspace = true }
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
futures = "0.3.31"
openmls = { workspace = true, features = ["test-utils"] }
rand = "0.9"
