[package]
edition = "2024"
name = "storage-provider-lock-demo"
version = "0.1.0"

[dependencies]
openmls = { workspace = true }
openmls_libcrux_crypto = { workspace = true }
openmls_memory_storage = { workspace = true }
openmls_traits = { workspace = true }
tokio = { version = "1.49.0", features = ["full"] }
# workspace dependency?
serde_json = "1.0"

[dev-dependencies]
futures = "0.3.31"
openmls = { workspace = true, features = ["test-utils"] }
rand = "0.9"
