[package]
name = "openmls_serialization_helpers"
version = "0.1.0"
authors = ["OpenMLS Authors"]
edition = "2021"
description = "Serialization helpers used by OpenMLS"
license = "MIT"
documentation = "https://docs.rs/openmls_serialization_helpers"
repository = "https://github.com/openmls/openmls/tree/main/serialization_helpers"
readme = "Readme.md"


[lib]
proc-macro = true

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
syn = { version = "2.0" }
quote = "1.0"
proc-macro2 = { version = "1.0.10", features = ["span-locations"] }

[dev-dependencies]
postcard = { version = "1", features = ["alloc"] }
serde_json = "1"
openmls = { workspace = true }
