[package]
name = "openmls_serialization_helpers"
version = "0.1.0"
authors = ["OpenMLS Authors"]
edition = "2021"
description = "Serialization helpers used by OpenMLS"
license = "MIT"
documentation = "https://docs.rs/openmls_serialization_helpers"
repository = "https://github.com/openmls/openmls/tree/main/serialization_helpers"
readme = "README.md"


[lib]
proc-macro = true

[features]
# a test feature that is not enabled by default,
# to check that macros produce valid output for
# enums that have some feature-flagged variants
# whose feature is not enabled.
test-feature = []

[dependencies]
syn = { version = "2.0" }
quote = "1.0"
proc-macro2 = { version = "1.0.10", features = ["span-locations"] }
thiserror = { workspace = true }

[dev-dependencies]
postcard = { version = "1", features = ["alloc"] }
serde_json = "1"
serde = { workspace = true }
