[package]
name = "openmls_sqlx_storage"
authors = ["OpenMLS Authors"]
version = "0.1.0"
edition = "2024"
description = "A storage provider for OpenMLS using SQLx."
license = "MIT"
documentation = "https://docs.rs/openmls_sqlx_storage"
repository = "https://github.com/openmls/openmls/tree/main/sqlx_storage"
readme = "README.md"

[dependencies]
openmls_traits = { workspace = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4" }
sqlx = { version = "0.8.6", features = ["sqlite", "migrate", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
futures-core = "0.3.31"

[dev-dependencies]
serde_json = { version = "1.0" }
