[package]
name = "openmls_sqlx_storage"
authors = ["OpenMLS Authors"]
version = "0.2.0"
edition = "2024"
description = "A storage provider for OpenMLS using SQLx."
license = "MIT"
documentation = "https://docs.rs/openmls_sqlx_storage"
repository = "https://github.com/openmls/openmls/tree/main/sqlx_storage"
readme = "README.md"

[dependencies]
openmls_traits = { workspace = true }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "migrate", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
futures-core = "0.3.31"

[dev-dependencies]
serde_json = { version = "1.0" }

[features]
extensions-draft-08 = ["openmls_traits/extensions-draft-08"]
