[package]
name = "tls-codec-derive"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
tls-codec = { version = "0.1", path = "../tls-codec" }
