[package]
name = "tls-codec"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tls-codec-derive = { version = "0.1", path = "../tls-codec-derive", optional = true }
hpke-rs = { version = "0.0.8", package = "hpke-rs", features = ["hazmat", "serialization"], optional = true }

[features]
derive = [ "tls-codec-derive" ]
hpke = [ "hpke-rs" ]
