[package]
name = "openmls_traits"
version = "0.1.0"
authors = ["OpenMLS Authors"]
edition = "2018"
description = "Traits used by OpenMLS"
license = "MIT"
documentation = "https://docs.rs/openmls_traits"
repository = "https://github.com/openmls/openmls/tree/main/traits"
readme = "README.md"

[lib]
path = "src/traits.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tls_codec = { version = "0.2.0", features = ["derive", "serde_serialize"] }
