[package]
name = "openmls_traits"
version = "0.5.0"
authors = ["OpenMLS Authors"]
edition = "2021"
description = "Traits used by OpenMLS"
license = "MIT"
documentation = "https://docs.rs/openmls_traits"
repository = "https://github.com/openmls/openmls/tree/main/traits"
readme = "README.md"

[lib]
path = "src/traits.rs"

[features]
default = []
test-utils = []
extensions-draft-08 = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tls_codec = { workspace = true }
