[package]
name = "openmls_x509_credential"
version = "0.2.0"
edition = "2021"
description = "A Basic Credential implementation for OpenMLS"
license = "MIT"
readme = "README.md"

[dependencies]
openmls_traits = { version = "0.2.0", path = "../traits" }
tls_codec = { workspace = true }
async-trait = { workspace = true }
serde = "1.0"
openmls_basic_credential = { version = "0.2.0", path = "../basic_credential" }
web-time = "1.1.0"
base64 = "0.21"
uuid = "1.4"
percent-encoding = "2.3"

# Rust Crypto
secrecy = { version = "0.8", features = ["serde"] }
x509-cert = "0.3"
const-oid = "0.9"
